# sendit

./: .gitignore  .prettierrc  README.md  components.json  index.html  notes.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  files.rs  iroh.rs  lib.rs  main.rs  utils.rs
src-tauri/src/download/: mod.rs
src-tauri/src/file_operations/: mod.rs
src-tauri/src/state/: mod.rs  user_data.rs
src-tauri/src/theme/: mod.rs
src-tauri/src/ticket/: mod.rs
src/api/: tauri.ts
src/assets/avatars/: index.ts
src/components/: animated-checkmark.tsx  loader.tsx  progress-bar.tsx  queue-container.tsx  queue-item.tsx  titlebar.tsx  toggle-theme.tsx
src/components/ui/: back-button.tsx  button.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  sonner.tsx  titlebar.tsx  tooltip.tsx
src/config/: events.ts
src/context/: edit-profile.tsx  theme.context.tsx
src/lib/: post-hog.ts  tanstack-router.ts  type-utils.ts  utils.ts  zustand.tsx
src/lib/tauri/: api.ts  events.ts  index.ts  types.ts  utils.ts
src/routes/: __root.tsx  _pages.tsx  index.tsx
src/routes/_pages/: edit-profile.tsx  index.tsx  onboard.tsx  receive.tsx  send.tsx
src/routes/_pages/-components/: progress-bar.tsx  queue-container.tsx  queue-item.tsx
src/state/: appstate.tsx
src/utils/: async.ts  fs.ts  index.ts  type-utils.ts  webview.ts
