[package]
name = "sendit"
version = "0.4.4"
description = "A Tauri App"
authors = ["Sandesh Pandey"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_send_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
iroh-io = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
n0-future = "0.1.2"

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde_json = "1"
tauri-plugin-dialog = "2"
iroh-blobs = { version = "0.34.0", features = ["net_protocol", "rpc"] }
iroh-gossip = { version = "0.34.0", features = ["rpc"] }
iroh = "0.34.0"
quic-rpc = "0.19.0"
tauri-plugin-clipboard-manager = "2"
file_icon_provider = "0.4.0"
image = "0.25.6"
base64 = "0.22.1"
tauri-plugin-log = "2"
log = "0.4.27"
window-vibrancy = "0.6.0"
tauri-plugin-windows-version = "2.0.0"
